tests/negative/test_data_glob_arr_not_def_init.orb
data Foo;

let f:(Foo 4);

fnc main() () {
};